deploy/overlays/operator/jenkins-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  template:
    spec:
      containers:
        - name: jenkins
          volumeMounts:
            - {name: ad-trust, mountPath: /etc/jenkins/trust, readOnly: true}
      volumes:
        - name: ad-trust
          secret: {secretName: jenkins-ad-truststore}
