deploy/overlays/operator/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: datenportal
  annotations:
    haproxy.router.openshift.io/timeout: 300s
spec:
  host: daten.so.ch
  to: {kind: Service, name: apisix}
  port: {targetPort: http}
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
